@@ -304,6 +304,10 @@ add_listview(self,pos:tuple,width=300,height=300,linew=80,bg='#f3f3f3',activebg=
 > > `funcs.add()`在末尾追加新元素，并且返回`add_ui`返回值
 > >
 > > `funcs.clear()`清除所有元素
+> >
+> > `funcs.getsel()`获取当前选中项序号，`-1`为未选择
+> >
+> > `funcs.select(index)`选择当前index对应的项目，不会触发回调函数
 
 ![](https://github.com/Smart-Space/TinUI/raw/main/image/TinUI列表视图.gif)
 
