@@ -19,6 +19,13 @@ def print__(name):
     global index
     index=name
     print(name)
+def getnowon(e):
+    print(funcs.getsel())
+def selectnext(e):
+    num = len(funcs.getitems())
+    now = funcs.getsel()
+    if now < num:
+        funcs.select(now+1)
 
 a=win()
 u=a.u
@@ -58,6 +65,8 @@ for i in range(0,5):
 
 u.add_button((5,320),'添加元素',command=additem)
 u.add_button((5,370),'删除元素',command=deleteitemthis)
+u.add_button((5,420),'获取选中元素',command=getnowon)
+u.add_button((5,470),'选择下一个',command=selectnext)
 u.add_button((120,320),'删除第一个元素',command=deleteitem1)
 u.add_button((120,370),'删除第二个元素',command=deleteitem)
 u.add_button((120,420),'清空元素',command=deleteall)
