@@ -9,6 +9,7 @@
 ==========5.34==========
 2025-
 1. TinUIXml的clean将会完全回退到初始化
+2. listview添加getsel方法（返回nowon）以及select方法（传入index）
 
 ==========5.33==========
 2025-7-5
